--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,36 @@
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
-support_version=1.20.x
+# Important Notes:
+# fabric.mod.json's modid field cannot be expanded, you must change it manually.
+# Every field you add must be added to buildSrc/src/main/groovy/multiloader-common.gradle expandProps map.
+
+# Project
+version=0.0.8
+group=com.yshs.searchonmcmod
+java_version=17
+
+# Common
 minecraft_version=1.20.1
-minecraft_version_range=[1.20.1,1.20.5)
-mapping_channel=parchment
-parchment_date=2023.09.03
-mod_id=searchonmcmod
 mod_name=Search on MCMOD
-mod_license=MIT
-mod_version=0.0.8
-mod_group_id=com.yshs.searchonmcmod
-mod_authors=bling-yshs
-mod_description=Search for item under the cursor on mcmod.cn
-#forge
+mod_author=bling-yshs
+mod_id=searchonmcmod
+license=MIT
+credits=
+description=Search for item under the cursor on mcmod.cn
+minecraft_version_range=[1.20.1,1.20.5)
+# The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
+parchment_minecraft=1.20.1
+parchment_version=2023.09.03
+
+# Fabric
+fabric_version=0.92.3+1.20.1
+fabric_loader_version=0.16.10
+
+# Forge
 forge_version=47.3.25
 forge_loader_version_range=[46,50)
-#fabric
-fabric_loader_version=0.16.10
-fabric_api_version=0.92.3+1.20.1
-#other
+
+# Extra
 github_url=https://github.com/bling-yshs/search-on-mcmod
+
+# Gradle
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
