--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = "UTF-8"
+plugins {
+    id 'fabric-loom' version '1.9-SNAPSHOT' apply(false)
+    id 'net.neoforged.moddev.legacyforge' version '2.0.77' apply(false)
+}
+subprojects {
+    tasks.withType(JavaCompile).configureEach {
+        options.encoding = 'UTF-8'
+    }
+    tasks.withType(Javadoc).configureEach {
+        options.encoding = 'UTF-8'
+    }
 }
