--- a/settings.gradle
+++ b/settings.gradle
@@ -1,42 +1,18 @@
 pluginManagement {
     repositories {
         gradlePluginPortal()
-        mavenCentral()
-        exclusiveContent {
-            forRepository {
-                maven {
-                    name = 'Fabric'
-                    url = uri('https://maven.fabricmc.net')
-                }
-            }
-            filter {
-                includeGroup('net.fabricmc')
-                includeGroup('fabric-loom')
-            }
+        maven {
+            name = 'Forge'
+            url = 'https://maven.minecraftforge.net/'
         }
-        exclusiveContent {
-            forRepository {
-                maven {
-                    name = 'Sponge'
-                    url = uri('https://repo.spongepowered.org/repository/maven-public')
-                }
-            }
-            filter {
-                includeGroupAndSubgroups("org.spongepowered")
-            }
+        maven {
+            name = 'Fabric'
+            url = 'https://maven.fabricmc.net/'
         }
-        exclusiveContent {
-            forRepository {
-                maven {
-                    name = 'Forge'
-                    url = uri('https://maven.minecraftforge.net')
-                }
-            }
-            filter {
-                includeGroupAndSubgroups('net.minecraftforge')
-            }
+        maven {
+            name = 'Sponge Snapshots'
+            url = 'https://repo.spongepowered.org/repository/maven-public/'
         }
-        maven { url = 'https://maven.parchmentmc.org' }
     }
 }
 
@@ -44,6 +20,7 @@ plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
 }
 
-include 'forge'
-include 'fabric'
-
+rootProject.name = 'search-on-mcmod'
+include('common')
+include('fabric')
+include('forge')
