--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@
 version=0.0.8
 group=com.yshs.searchonmcmod
 java_version=17
+support_version=1.20.x
 
 # Common
 minecraft_version=1.20.1
@@ -32,5 +33,5 @@ forge_loader_version_range=[46,50)
 github_url=https://github.com/bling-yshs/search-on-mcmod
 
 # Gradle
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx3G -Dfile.encoding=UTF-8
 org.gradle.daemon=false
