--- a/.github/workflows/commit-build.yml
+++ b/.github/workflows/commit-build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: 安装 Gradle (Install Gradle)
         uses: actions/setup-java@v4
         with:
-          java-version: 8
+          java-version: 25
           distribution: liberica
           cache: gradle
 
@@ -25,7 +25,7 @@ jobs:
         id: gradle-build
         run: |
           ./gradlew build --no-daemon
-          echo "version=$(./gradlew -q printVersion --no-daemon)" >> $GITHUB_OUTPUT
+          echo "version=$(./gradlew -q printModVersion --no-daemon)" >> $GITHUB_OUTPUT
 
       - name: 上传构建产物 (Upload artifacts)
         uses: actions/upload-artifact@v4
