--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,7 @@ forge_loader_version_range=[1,)
 neoforge_version=21.1.80
 neoforge_loader_version_range=[4,)
 # Gradle
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx3G -Dfile.encoding=UTF-8
 org.gradle.daemon=false
 # Other
 github_url=https://github.com/bling-yshs/search-on-mcmod
